# prometheus_mission

./: CMakeLists.txt  README.md  package.xml
autonomous_landing/: autonomous_landing.cpp  autonomous_landing_aruco.cpp  autonomous_landing_aruco.h
circle_crossing/: circle_crossing.cpp
formation/: formation_change.cpp  formation_control.cpp  formation_move.cpp
formation_flight/: turtlebot_follow.cpp  turtlebot_formation.cpp
gimbal_control/: gimbal_control_circle.cpp  gimbal_control_demo.cpp
include/: Formation.h  gimbal_control.h  gimbal_control_vel.h  mission_utils.h  ukf_car.h  ukf_nca.h  ukf_ncv.h
indoor_competition/: indoor_competition.cpp
object_tracking/: object_tracking.cpp
planning_mission/: planning_mission.cpp  pub_goal.cpp  pub_goal_from_qgc.cpp
test/: autonomous_landing_ukf.cpp  fake_detectioninfo.cpp  mission_cmd_pub.cpp  pad_tracking.cpp
waypoint_tracking/: waypoint_tracking.cpp
