<?xml version="1.0"?>
<package format="2">
  <name>prometheus_mission</name>
  <version>2.0.0</version>
  <description>
    The prometheus_mission package
  </description>

  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <author email="fatmoonqyp@126.com">Yuhua Qi</author>
  <license>Apache</license>

  <url type="website">http://www.amovlab.com/</url>
  <url type="repository">https://github.com/HuaYuXiao/prometheus_mission.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
