<?xml version="1.0"?>
<package format="2">
  <name>easondrone_mission</name>
  <version>2.0.2</version>
  <description>
    The easondrone_mission package
  </description>

  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <author email="fatmoonqyp@126.com">Yuhua Qi</author>

  <license>Apache</license>

  <url type="repository">https://github.com/HuaYuXiao/EasonDrone_Mission.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
